--- a/CSS_advanced/styles/22-style.css
+++ b/CSS_advanced/styles/22-style.css
@@ -41,7 +41,7 @@
 [data-section-theme=“dark”] {
     --text-color: var(--color-white);
     --section-title-color: var(--color-white);
-    color: var(--color-black);
+    background-color: var(--color-black);
 }
 *, *::after, *::before{
     box-sizing: border-box;
