correct for social-link svg the key color

--- a/CSS_advanced/styles/23-style.css
+++ b/CSS_advanced/styles/23-style.css
@@ -171,7 +171,7 @@ ul.row {
     display: block;
 }
 .social-link > svg {
-    color: var(--text-color);
+    fill: var(--text-color);
 }
 .row::after {
     content: "";
