--- a/CSS_advanced/styles/29-style.css
+++ b/CSS_advanced/styles/29-style.css
@@ -167,7 +167,7 @@ a:active {
     width: 0;
     height: 0.2rem;
 }
-.nav .nav-item .nav-link::before {
+.nav .nav-item:hover .nav-link::before {
     background-color: var(--color-primary);
     width: 100%;
 }
