correct color & background color in selector button:hover

--- a/CSS_advanced/styles/32-style.css
+++ b/CSS_advanced/styles/32-style.css
@@ -316,9 +316,8 @@ ul.row {
     text-decoration: var(--button-hover-text-decoration);
     background: var(--button-hover-background);
     transition-duration: var(--transition-duration);
-    color: var(--transition);
-    background-color: var(--transition);
-    
+    color: var(--transition-duration) var(--transition-cubic-bezier);
+    background-color: var(--transition-duration) var(--transition-cubic-bezier);
 }
 .section-hero {
     background-size: 90rem auto;
