--- a/CSS_advanced/styles/32-style.css
+++ b/CSS_advanced/styles/32-style.css
@@ -168,7 +168,7 @@ a:active {
     background-color: var(--color-white);
     width: 0;
     height: 0.2rem;
-    --transition: var(--transition-duration) var(--transition-cubic-bezier);
+    transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 .nav .nav-item:hover .nav-link::before {
     background-color: var(--color-primary);
@@ -316,8 +316,7 @@ ul.row {
     text-decoration: var(--button-hover-text-decoration);
     background: var(--button-hover-background);
     transition-duration: var(--transition-duration);
-    color: var(--transition-duration) var(--transition-cubic-bezier);
-    background-color: var(--transition-duration) var(--transition-cubic-bezier);
+    transition-property: color, background-color;
 }
 .section-hero {
     background-size: 90rem auto;
